--- a/challenge3.html
+++ b/challenge3.html
@@ -8,6 +8,7 @@
     {
       if(document.getElementById('optstraw').checked == false && document.getElementById('optblue').checked == false) 
       {
+      	alert("You must select at least one option")
         return false
       }
       else if(document.getElementById('optstraw').checked == true && document.getElementById('optblue').checked == false) 
