--- a/challenge3.html
+++ b/challenge3.html
@@ -8,8 +8,8 @@
     {
       if(document.getElementById('optstraw').checked == false && document.getElementById('optblue').checked == false) 
       {
-      	alert("You must select at least one option")
-        return false
+      	alert("You must select at least one option");
+        return false;
       }
       else if(document.getElementById('optstraw').checked == true && document.getElementById('optblue').checked == false) 
       {
