--- a/challenge4.html
+++ b/challenge4.html
@@ -14,11 +14,11 @@
     
     <script type="text/javascript">
     function checkForm(){
-      if(document.fullname.fullname.value==""){
+      if(document.fullname.value==""){
         document.getElementByClassName("errormsg").style.visibility = "visible";
         return false;
       }
-      else if(document.streetaddr.streetaddr.value==""){
+      else if(document.streetaddr.value==""){
         document.getElementByClassName("errormsg").style.visibility = "visible";
         return false;
       }
