--- a/challenge4.html
+++ b/challenge4.html
@@ -14,12 +14,12 @@
     
     <script type="text/javascript">
     function checkForm(){
-      if(document.fullname.value=="")
+      if(document.getElementById("fullname").value=="")
       {
         document.getElementByClassName("errormsg").style.visibility = "visible";
         return false;
       }
-      else if(document.streetaddr.value=="")
+      else if(document.getElementById("streetaddr").value=="")
       {
         document.getElementByClassName("errormsg").style.visibility = "visible";
         return false;
