--- a/challenge4.html
+++ b/challenge4.html
@@ -4,12 +4,19 @@
 	<meta charset="UTF-8">
 	<title>Challenge 4</title>
     <style>
-    #errormsg {
+    .errormsg {
       color: red;
       font-weight: bold;
       font-style: "Trebuchet MS", Helvetica, sans-serif;
       visibility: hidden;
     }   
+    #nameerrormsg {
+      visibility: hidden;
+    }
+
+    #addrerrormsg {
+      visibility: hidden;
+    }
     </style>
     
     <script type="text/javascript">
