--- a/challenge1.html
+++ b/challenge1.html
@@ -16,11 +16,20 @@ When you test your form at the moment, you'll notice that you can click on the c
   <head>
     <title>JavaScript Challenges</title>
     <style>
-    /*    Your code here  */    
+      #emailfield{
+        display: none;
+    }   
     </style>
     
     <script type="text/javascript">
-    /*    Your code here  */    
+      function toggleEmail {
+        if(document.getElementById('subscribe').checked){
+          document.getElementById('emailfield').style.display = "block";
+        }
+        else{
+          document.getElementById('emailfield').style.display = "none";
+        }
+      }   
     </script>
   </head>
   <body>
