--- a/challenge1.html
+++ b/challenge1.html
@@ -22,7 +22,7 @@ When you test your form at the moment, you'll notice that you can click on the c
     </style>
     
     <script type="text/javascript">
-      function toggleEmail {
+      function toggleEmail() {
         if(document.getElementById('subscribe').checked){
           document.getElementById('emailfield').style.display = "block";
         }
