--- a/challenge4.html
+++ b/challenge4.html
@@ -23,12 +23,12 @@
     function checkForm(){
       if(document.getElementById("fullname").value=="")
       {
-        document.getElementByClassName("errormsg").style.visibility = "visible";
+        document.getElementByClassName("nameerrormsg").style.visibility = "visible"
         return false;
       }
       else if(document.getElementById("streetaddr").value=="")
       {
-        document.getElementByClassName("errormsg").style.visibility = "visible";
+        document.getElementByClassName("addrerrormsg").style.visibility = "visible";
         return false;
       }
       else
