--- a/challenge4.html
+++ b/challenge4.html
@@ -21,14 +21,9 @@
     
     <script type="text/javascript">
     function checkForm(){
-      if(document.getElementById("fullname").value=="")
+      if(document.getElementById("fullname").value=="" || document.getElementById("streetaddr").value=="") 
       {
         document.getElementById("nameerrormsg").style.visibility = "visible"
-        return false;
-      }
-      else if(document.getElementById("streetaddr").value=="")
-      {
-        document.getElementById("addrerrormsg").style.visibility = "visible";
         return false;
       }
       else
