--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello World
+<nav>
+			<a href = "http://holdspen.github.io/JavaScriptChallenge/challenge1.html">Challenge 1</a>
+			<a href = "http://holdspen.github.io/JavaScriptChallenge/challenge2.html">Challenge 2</a>
+			<a href = "http://holdspen.github.io/JavaScriptChallenge/challenge3.html">Challenge 3</a>
+			<a href = "http://holdspen.github.io/JavaScriptChallenge/challenge4.html">Challenge 4</a>
+		</nav>
