--- a/challenge2.html
+++ b/challenge2.html
@@ -20,6 +20,12 @@ Now when you test your form, you'll notice that when you un-check your checkbox,
 Add an if-else statement to your setHomeAddress() function so that when the checkbox is un-checked the Home address field is reset to empty and enabled again.-->
 <html lang="en">
 <head>
+  <nav>
+      <a href = "http://holdspen.github.io/JavaScriptChallenge/challenge1.html">Challenge 1</a>
+      <a href = "http://holdspen.github.io/JavaScriptChallenge/challenge2.html">Challenge 2</a>
+      <a href = "http://holdspen.github.io/JavaScriptChallenge/challenge3.html">Challenge 3</a>
+      <a href = "http://holdspen.github.io/JavaScriptChallenge/challenge4.html">Challenge 4</a>
+    </nav>
 	<meta charset="UTF-8">
 	<title>Challenge Two</title>
     
