--- a/challenge3.html
+++ b/challenge3.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <nav>
+      <a href = "http://holdspen.github.io/JavaScriptChallenge/challenge1.html">Challenge 1</a>
+      <a href = "http://holdspen.github.io/JavaScriptChallenge/challenge2.html">Challenge 2</a>
+      <a href = "http://holdspen.github.io/JavaScriptChallenge/challenge3.html">Challenge 3</a>
+      <a href = "http://holdspen.github.io/JavaScriptChallenge/challenge4.html">Challenge 4</a>
+    </nav>
 	<meta charset="UTF-8">
 	<title>Challenge 3</title>
     <script type="text/javascript">
